# Roadside-Rescue-AI-Agent

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy-pages.yml  render-start.yml  render-stop.yml
client/: app.js  index.html  style.css
figma/: package.json
figma/src/app/: App.tsx
figma/src/app/components/: VoiceAssistant.tsx
server/: main.py  stt.py  tts.py
server/db/: schema.sql  seed.py
server/graph/: builder.py  nodes.py  state.py
server/preprocessing/: anger_detector.py
server/prompts/: system.py
server/tools/: book_mechanic.py  db.py  get_slots.py  verify_vehicle.py
tests/: test_anger_detector.py  test_tools.py
